# otus-highload-staging

./: .env  README.md  Roman Ivshin - Otus Highload.postman_collection  docker-compose.prod.yml  docker-compose.yml
api/: Cargo.toml  Dockerfile  Dockerfile.prod
api/.sqlx/: query-0003dfbb00627a02cfc70e9b9e4b4e9da15e61169a95290ecb223281bc614824.json
api/src/: create_user.rs  crypt_helper.rs  database_error.rs  get_user_by_id.rs  login_user.rs  main.rs  models.rs  utils.rs
frontend/: package-lock.json  package.json
