[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
rocket = { version = "0.5", features = ["json"] }
bb8 = "0.7"
bb8-postgres = "0.7"
tokio-postgres = "0.7"
